codelet/fspec-tui/tests/snapshots/app_with_mock_backend_repl__repl_after_first_chunk_rpc012.snap
---
source: fspec-tui/tests/app_with_mock_backend_repl.rs
expression: rows
---
- ┌ Agent — s-mock-1 ────────────────────────────────────────────────────────────┐
- │assistant> Hello!                                                             │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- └──────────────────────────────────────────────────────────────────────────────┘
- "┌Input (Enter=send, Ctrl+C=interrupt, ESC=back)────────────────────────────────┐"
- │                                                                              │
- └──────────────────────────────────────────────────────────────────────────────┘
- "? help  q quit  Tab switch pane                                                 "
