codelet/fspec-tui/tests/snapshots/app_with_mock_backend_repl__repl_after_submit_rpc012.snap
---
source: fspec-tui/tests/app_with_mock_backend_repl.rs
assertion_line: 152
expression: rows
---
- "Agent                                                         tokens: 0↓ 0↑ [0%]"
- ┌ Agent — s-mock-1 ────────────────────────────────────────────────────────────┐
- │user> hi                                                                      │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- └──────────────────────────────────────────────────────────────────────────────┘
- ┌──────────────────────────────────────────────────────────────────────────────┐
- "│> Type a message... ('Shift+↑/↓' history | 'Shift+←/→' sessions | 'Tab' select│"
- └──────────────────────────────────────────────────────────────────────────────┘
- "Enter=send  Ctrl+C=interrupt  ESC=back                                          "
