codelet/fspec-tui/tests/snapshots/app_with_mock_backend_repl__repl_bootstrap_rpc012.snap
---
source: fspec-tui/tests/app_with_mock_backend_repl.rs
expression: rows
---
- ┌ Board (2) ───────────────────────────────────────────────────────────────────┐
- │BACKLOG    SPECIFYING TESTING    IMPLEMENTINVALIDATING DONE       BLOCKED     │
- │                                                                              │
- │                                 AUTH-002              AUTH-001               │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- │                                                                              │
- └──────────────────────────────────────────────────────────────────────────────┘
- "? help  q quit  Tab switch pane                                                 "
